--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 table, th, td {
-    border: 1px solid black;
+    border: 3px solid black;
     border-collapse: collapse;
   }
 th, td {
@@ -12,7 +12,11 @@ th {
 table {
     width: 100%;
     border-spacing: 5px;
+    
   }
-.h1 {
+h1 {
     text-align: center;
+}
+div{
+    background-color: brown
 }
